<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/studentsListFragment">

    <!-- Students List Fragment -->
    <fragment
        android:id="@+id/studentsListFragment"
        android:name="com.example.studentsapp.fragments.StudentsListFragment"
        android:label="@string/students_list_title"
        tools:layout="@layout/fragment_students_list">
        
        <action
            android:id="@+id/action_studentsListFragment_to_addStudentFragment"
            app:destination="@id/addStudentFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
            
        <action
            android:id="@+id/action_studentsListFragment_to_studentDetailsFragment"
            app:destination="@id/studentDetailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <!-- Add Student Fragment -->
    <fragment
        android:id="@+id/addStudentFragment"
        android:name="com.example.studentsapp.fragments.AddStudentFragment"
        android:label="@string/add_student"
        tools:layout="@layout/fragment_add_student" />

    <!-- Student Details Fragment -->
    <fragment
        android:id="@+id/studentDetailsFragment"
        android:name="com.example.studentsapp.fragments.StudentDetailsFragment"
        android:label="@string/student_details"
        tools:layout="@layout/fragment_student_details">
        
        <argument
            android:name="studentId"
            app:argType="string" />
            
        <action
            android:id="@+id/action_studentDetailsFragment_to_editStudentFragment"
            app:destination="@id/editStudentFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <!-- Edit Student Fragment -->
    <fragment
        android:id="@+id/editStudentFragment"
        android:name="com.example.studentsapp.fragments.EditStudentFragment"
        android:label="@string/edit_student"
        tools:layout="@layout/fragment_edit_student">
        
        <argument
            android:name="studentId"
            app:argType="string" />
    </fragment>

</navigation>
